--- a/HospitalApp-web/src/main/webapp/AgregarProfesional.xhtml
+++ b/HospitalApp-web/src/main/webapp/AgregarProfesional.xhtml
@@ -8,7 +8,7 @@
     <h:form id="formulProfesional">
         <div align="center">
             <p:growl id="growl" showDetail="true"/>
-            <p:panelGrid columns="2">
+            <p:panelGrid columns="2" styleClass="companyHeaderGrid">
                 <p:panel header="Detalle Principal">
                     <p:panelGrid columns="3">
                         <p:outputLabel for="Rut" value="Rut: " style="font-weight: bold"/>
@@ -88,7 +88,7 @@
             <p:commandButton value="Ingresar Profesional" actionListener="#{ingresoProfesional.agregarProfesional()}" update="formulProfesional"/>
 
             <p:dialog id="DatosContacto" header="Datos de contacto" widgetVar="contacto" showEffect="fade" hideEffect="fade">
-                <p:panelGrid id="Contacto" columns="3">
+                <p:panelGrid id="Contacto" columns="3" styleClass="companyHeaderGrid">
                     <p:outputLabel for="DireccionPro" value="Dirección: "/>
                     <p:inputText id="DireccionPro" value="#{ingresoProfesional.direccion}"/>
                     <p:message for="DireccionPro" display="icon"/>
