--- a/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
+++ b/HospitalApp-web/src/main/webapp/BuscarPaciente.xhtml
@@ -7,7 +7,7 @@
 
     <h:form id="buscaPaciente">
         <div align="center">
-            <p:panelGrid columns="3" id="datosPaciente">
+            <p:panelGrid columns="3" id="datosPaciente" styleClass="companyHeaderGrid">
                 <p:outputLabel for="Rut" value="Rut: "/>
                 <p:autoComplete id="Rut" value="#{busquedaMB.rut}" completeMethod="#{busquedaMB.completarRut}" 
                                 var="rut" itemLabel="#{rut}" itemValue="#{rut}"/>
