--- a/HospitalApp-web/src/main/webapp/Subespecialidad.xhtml
+++ b/HospitalApp-web/src/main/webapp/Subespecialidad.xhtml
@@ -66,7 +66,7 @@
 
         <p:dialog id="nuevaSubespecialidad" header="Nueva Subespecialidad" widgetVar="addSubespec" resizable="false"
                   showEffect="clip" hideEffect="fold" >
-            <h:panelGrid id="display2" columns="2" cellpadding="4">
+            <h:panelGrid id="display2" columns="2" cellpadding="4" styleClass="companyHeaderGrid">
                 <h:outputText value="Código Subespecialidad:" />
                 <h:inputText id="codigo" value="#{subespecialidadMB.subespecialidadId}"/>
                 <h:outputText value="Nombre Subespecialidad:" />
