--- a/HospitalApp-web/src/main/webapp/index.xhtml
+++ b/HospitalApp-web/src/main/webapp/index.xhtml
@@ -14,6 +14,9 @@
                 padding: 0;
                 font-size:80%;
             }
+            .companyHeaderGrid tr, .companyHeaderGrid td {
+                border: none;
+            }
         </style>
     </h:head>
 
@@ -34,6 +37,7 @@
                 <p:menuitem value="Ver Profesionales" url="#" onclick="PF('viewPro').show()"/>
             </p:submenu>
             <p:menuitem value="Buscar Paciente" url="#" onclick="PF('searchPac').show()"/>
+            <p:menuitem value="Ver Anamnesis" url="#" onclick="PF('anamnesisPac').show()"/>
         </p:menubar>
         <p:dialog id='admisionPacientes' maximizable="true" header="Admision Pacientes" widgetVar="addPac" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
                   minimizable="true" height="540" width="800">
@@ -63,7 +67,12 @@
                   minimizable="true">
             <ui:include src="BuscarPaciente.xhtml"/>
         </p:dialog>
-        
+
+        <p:dialog id="anamnesisPaciente" maximizable="true" header="Anamnesis" widgetVar="anamnesisPac" showEffect="fade" hideEffect="fade" closeOnEscape="true" 
+                  minimizable="true">
+            <ui:include src="Anamnesis.xhtml"/>
+        </p:dialog>
+
         <p:confirmDialog global="true" showEffect="fade" hideEffect="explode">
             <p:commandButton value="Si" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check"/>
             <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close"/>     
